--- a/css/chat__2-room.css
+++ b/css/chat__2-room.css
@@ -1,4 +1,4 @@
-.Sendmessage__Friend__receive__left {
+.bae {
     background-image: url(img/bae.jpg);
     background-size: cover;
     width: 40px;
