--- a/css/chat__5-room.css
+++ b/css/chat__5-room.css
@@ -1,4 +1,4 @@
-.Sendmessage__Friend__receive__left {
+.bang {
     background-image: url(img/bang.jpg);
     background-size: cover;
     width: 40px;
