--- a/css/find.css
+++ b/css/find.css
@@ -13,6 +13,8 @@
 }
 
 .Find-bar__title {
+    animation: friends__appear__left 0.5s ease forwards;
+
     position: relative;
     margin-left: 19px;
     font-size: 27px;
@@ -20,6 +22,8 @@
 }
 
 .Find-bar__Icon {
+
+    animation: friends__appear__right 0.5s ease forwards;
     position: relative;
     display: flex;
     justify-content: space-around;
@@ -50,11 +54,37 @@
     margin-bottom: 20px;
     border-bottom: 1px solid rgba(0, 0, 0, 0.05);
 
-    padding: 0px 30px;
     width: 100%;
     height: 140px;
     display: flex;
     justify-content: space-around;
+    align-items: center;
+}
+
+.Find__top>div:nth-child(1) {
+
+    animation: friends__appear__left 0.5s ease forwards;
+}
+
+.Find__top>div:nth-child(2) {
+
+    animation: friends__appear__left 0.8s ease forwards;
+}
+
+.Find__top>div:nth-child(3) {
+
+    animation: friends__appear__left 1.1s ease forwards;
+}
+
+.Find__top>div:nth-child(4) {
+
+    animation: friends__appear__left 1.4s ease forwards;
+}
+
+.Find__top__Icon {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
 }
 
@@ -69,8 +99,8 @@
 .Find__top__Icon__title {
     opacity: 0.7;
     margin-top: 15px;
-    font-size: small;
     font-weight: 500;
+    font-size: 8px;
 }
 
 .Find__bottom {
