--- a/css/chat__3-room.css
+++ b/css/chat__3-room.css
@@ -1,4 +1,4 @@
-.Sendmessage__Friend__receive__left {
+.song {
     background-image: url(img/song.jpg);
     background-size: cover;
     width: 40px;
