--- a/css/chat__4-room.css
+++ b/css/chat__4-room.css
@@ -1,4 +1,4 @@
-.Sendmessage__Friend__receive__left {
+.won {
     background-image: url(img/won.jpg);
     background-size: cover;
     width: 40px;
