--- a/css/settings.css
+++ b/css/settings.css
@@ -23,12 +23,14 @@
 }
 
 .Settings-bar__back {
+    animation: friends__appear__left 0.5s ease forwards;
     font-size: 30px;
     margin-left: 20px;
 }
 
 
 .Settings-bar__title {
+    animation: friends__appear__left 1s ease forwards;
     position: relative;
     margin-left: 19px;
     font-size: 27px;
@@ -37,6 +39,7 @@
 
 
 .Settings-bar__Icon {
+    animation: friends__appear__left 1.2s ease forwards;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -59,6 +62,22 @@
     align-items: center;
 }
 
+
+.Settings__Top>.Settings__Top__Box:nth-child(1) {
+    animation: friends__appear__left 0.4s ease-in-out forwards;
+
+}
+
+.Settings__Top>.Settings__Top__Box:nth-child(2) {
+    animation: friends__appear__left 0.6s ease-in-out forwards;
+
+}
+
+.Settings__Top>.Settings__Top__Box:nth-child(3) {
+    animation: friends__appear__left 0.8s ease-in-out forwards;
+
+}
+
 .Settings__Top__Box__Icon {
     font-size: 25px;
     margin-left: 15px;
@@ -67,12 +86,15 @@
 }
 
 .ettings__Top__Box__title {
+
+
     height: 100%;
     font-size: 15px;
     opacity: 0.8;
 }
 
 .Settings__Top__Box__title__title {
+
     display: flex;
     justify-content: center;
     align-items: center;
@@ -111,6 +133,27 @@
     display: flex;
     align-items: center;
 }
+
+.Settings__Bottom>.Settings__Bottom__Box:nth-child(1) {
+    animation: friends__appear__left 1s ease-in-out forwards;
+}
+
+.Settings__Bottom>.Settings__Bottom__Box:nth-child(2) {
+    animation: friends__appear__left 1.2s ease-in-out forwards;
+}
+
+.Settings__Bottom>.Settings__Bottom__Box:nth-child(3) {
+    animation: friends__appear__left 1.4s ease-in-out forwards;
+}
+
+.Settings__Bottom>.Settings__Bottom__Box:nth-child(4) {
+    animation: friends__appear__left 1.6s ease-in-out forwards;
+}
+
+.Settings__Bottom>.Settings__Bottom__Box:nth-child(5) {
+    animation: friends__appear__left 1.8s ease-in-out forwards;
+}
+
 
 .Settings__Bottom__Box__Icon {
     font-size: 25px;
