--- a/css/mainScreen.css
+++ b/css/mainScreen.css
@@ -34,3 +34,24 @@
 
     }
 }
+
+.myScreen {
+    position: fixed;
+    font-weight: 600;
+    z-index: 10;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    font-size: 30px;
+    justify-content: center;
+    align-items: center;
+    background-color: blanchedalmond;
+    display: none;
+
+}
+
+@media screen and (max-height:850px) {
+    .myScreen {
+        display: flex;
+    }
+}
