--- a/css/mainScreen.css
+++ b/css/mainScreen.css
@@ -1,57 +1,52 @@
 .mainScreen {
-    position: relative;
-    z-index: 1;
-    animation: appear 1s ease-in-out forwards;
-    width: 99.7%;
-    height: 550px;
-    background-color: #DDF3FF;
-    border-top: 1px solid rgba(0, 0, 0, 0.02);
-    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-
+  position: relative;
+  z-index: 1;
+  animation: appear 1s ease-in-out forwards;
+  width: 99.7%;
+  height: 550px;
+  background-color: #ddf3ff;
+  border-top: 1px solid rgba(0, 0, 0, 0.02);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
 
 .mainScreen__2 {
-    z-index: 2;
-    position: relative;
+  z-index: 2;
+  position: relative;
 
-    width: 99.5%;
-    height: 550px;
+  width: 99.5%;
+  height: 550px;
 }
 
 @keyframes appear {
-    0% {
-        transform: translateY(0);
+  0% {
+    transform: translateY(0);
+  }
 
-    }
+  50% {
+    transform: translateY(-7px);
+  }
 
-    50% {
-        transform: translateY(-7px);
-
-    }
-
-    100% {
-        transform: translateY(0);
-
-    }
+  100% {
+    transform: translateY(0);
+  }
 }
 
 .myScreen {
-    position: fixed;
-    font-weight: 600;
-    z-index: 10;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    font-size: 30px;
-    justify-content: center;
-    align-items: center;
-    background-color: blanchedalmond;
-    display: none;
-
+  position: fixed;
+  font-weight: 600;
+  z-index: 10;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  font-size: 30px;
+  justify-content: center;
+  align-items: center;
+  background-color: blanchedalmond;
+  display: none;
 }
 
-@media screen and (max-height:850px) {
+/* @media screen and (max-height:850px) {
     .myScreen {
         display: flex;
     }
-}
+} */
